<?xml version="1.0"?>
<package format="2">
  <name>ik_constraint2_scfr</name>
  <version>0.0.0</version>
  <description>The ik_constraint2_scfr package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>
  <depend>ik_constraint2_bullet</depend>
  <depend>scfr_solver</depend>

</package>
